# sharingLibraries

./: CMakeLists.txt  main.c
